@@ -24,6 +24,10 @@ Torben Hohn
   Jackdmp changes log
 ---------------------------
 
+2009-03-26 Stephane Letz  <letz@grame.fr>
+
+	* First working JackBoomerDriver two threads version.
+
 2009-03-24 Stephane Letz  <letz@grame.fr>
 
 	* New JackBoomerDriver class for Boomer driver on Solaris.
